add CRUD project
